syntax = "proto3";

option go_package = ".;connect";
package protos;

service LiveConnection {
  rpc Subscribe(ConnectRequest) returns (stream Response) {}
  rpc Unsubscribe(UnSubscribeRequest) returns (Response) {}
}

message SongData{
  string id = 1;
  int32 port=2;
  repeated string songs=3;
}
message ConnectRequest {
  SongData connectionData = 1;
}
message Response {
  repeated SongData songs=1;
}
message UnSubscribeRequest{
  string id = 1;
}